Fixing some layout bugs

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -6,7 +6,7 @@ body {
   font:normal 16px/1.4em georgia, serif;
   color:#333;
   background:#ddd url(../graphics/bg.jpg); }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   color:#000;
   font-family:"helvetica neue", helvetica, arial, sans-serif; }
 h1 {
@@ -15,7 +15,7 @@ h1 {
   line-height:48px;
   letter-spacing:-.05em;}
 h2 {
-  margin: 40px 0 10px 0;
+  margin: 40px 0 20px 0;
   font-size: 26px; }
 h3 {
   margin: 20px 0 1px 0;
@@ -33,7 +33,7 @@ p {margin:0 0 10px 0;}
 ul {
   margin:0 0 10px 0;
   padding: 0 0 0 1.5em; }
-li {margin: 0 0 5px 0;}
+li {margin: 0 0 3px 0;}
 a {color: #39b9ee;}
 a:link {}
 a:visited {}
@@ -111,101 +111,26 @@ hr {
 #request_invite .inner,
 #content .inner,
 #footer .inner {
-  width:910px; 
+  max-width: 800px; 
   margin:0 auto 0 auto; }
 
 #header {
   padding:2em 2em 1em 2em;
   text-align:center;}
-.homepage #header {
-  padding:0;  
-  padding-top:2em;
-  color:#fff;
-  background:rgb(68,68,68) url(/graphics/header_fade.png) 0 100% repeat-x;}
   #header h1 {
     margin-bottom:.25em;
     color:#fff; }
     #header h1 span {display:none;}
-  #header .tagline {font-size:1.125em;}
-  .homepage #header .inner {  
-    position:relative; }
 
 #content .inner,
 #footer .inner {
   padding:0;
   background:#fff; }
 
-#content {}
-
 .block {
   border-top: 1px solid #eee;
   padding: 46px 50px; }
 
-#example_sites {
-  width:832px;
-  margin:0 auto; }
-  #example_sites ul {
-    margin:0;
-    padding:0;
-    overflow:hidden; }
-  #example_sites li {
-    position:relative;
-    overflow:hidden;
-    list-style:none;
-    margin:0;
-    padding:0; }
-  #example_sites .example_info {
-    position:absolute;
-    bottom:0;
-    left:200px;
-    padding:10px 15px 10px 15px;
-    width:400px;
-    -webkit-border-top-right-radius:5px;
-    -webkit-border-top-left-radius:5px;
-    -moz-border-top-radius-topright:5px;
-    -moz-border-top-radius-topleft:5px;
-    background:rgba(0,0,0,.7); 
-    color:#fff; 
-    text-align:center; }
-    #example_sites img {display:block;}
-    #example_sites .example_info h2 {
-      display:inline;
-      margin:0;
-      color:#fff;
-      text-transform:uppercase;
-      font-size:.75em; 
-      line-height:1em; }
-    #example_sites .example_info p {
-      display:inline;
-      margin:0 0 0 .5em;
-      font-size: .75em; 
-      line-height:1.7142em; }
-
-#nextBtn a, #prevBtn a {
-  position:absolute;
-  display:block;
-  text-indent:-9999px;
-  height:55px; 
-  width:37px; 
-  outline:none;
-  background:transparent url(/graphics/ui.png) 100% 0 no-repeat;}
-#nextBtn a {
-  bottom:180px;
-  right:0; }
-#prevBtn a {
-  bottom:180px;
-  left:0; 
-  background-position:0 -74px; }
-
-#request_invite {}
-#request_invite .inner {
-  padding:2em 0 2em 0;
-  text-align:center; }
-  #request_invite p {margin-bottom:.5em;}
-  #request_invite label {
-    font-size:.75em;
-    text-transform:uppercase;}
-  #request_invite input {font-size:1.1em;}
 
 .features {
   border-top:none;
